--- a/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-modifications.tex
@@ -24,7 +24,7 @@ most of the adapted ones.
 
 Besides the expected changes caused by new functionality, there are a number of
 not|-|so|-|expected changes. These are sometimes a side|-|effect of a new
-(conflicting) feature, or, more often than not, a change neccessary to clean up
+(conflicting) feature, or, more often than not, a change necessary to clean up
 the internal interfaces. These will also be mentioned.
 
 \stopsubsection
@@ -42,7 +42,7 @@ most still comes from the original. But we divert a bit.
     The current code base is written in \CCODE, not \PASCAL. We use \CWEB\ when
     possible. As a consequence instead of one large file plus change files, we
     now have multiple files organized in categories like \type {tex}, \type
-    {pdf}, \type {lang}, \type {font}, \type {lua}, etc. There are some artefacts
+    {pdf}, \type {lang}, \type {font}, \type {lua}, etc. There are some artifacts
     of the conversion to \CCODE, but in due time we will clean up the source code
     and make sure that the documentation is done right. Many files are in the
     \CWEB\ format, but others, like those interfacing to \LUA, are \CCODE\ files.
