--- a/doc/context/sources/general/manuals/luatex/luatex-lua.tex
+++ b/doc/context/sources/general/manuals/luatex/luatex-lua.tex
@@ -347,6 +347,16 @@ returns the name.
 
 \startsubsection[title={Multibyte \type {string} functions}]
 
+\libidx{string}{utfvalues}
+\libidx{string}{utfcharacters}
+\libidx{string}{characters}
+\libidx{string}{characterpairs}
+\libidx{string}{bytes}
+\libidx{string}{bytepairs}
+\libidx{string}{utfvalue}
+\libidx{string}{utfcharacter}
+\libidx{string}{utflength}
+
 The \type {string} library has a few extra functions like \type
 {string.explode(s[,m])}. This function returns an array containing the string
 argument \type {s} split into sub-strings based on the value of the string
@@ -369,7 +379,7 @@ piecemeal:
     \type {string.utfcharacters(s)}: a string with a single \UTF-8 token in it
 \stopitem
 \startitem
-    \type {string.characters(s)}: a string containing one byte
+    \type {string.cWharacters(s)}: a string containing one byte
 \stopitem
 \startitem
     \type {string.characterpairs(s)}: two strings each containing one byte or an
@@ -428,6 +438,18 @@ as building blocks for other helpers. So, eventually we can decide to drop the
 \stopsubsection
 
 \startsubsection[title={Extra \type {os} library functions}]
+
+\libidx{os}{selfdir}
+\libidx{os}{exec}
+\libidx{os}{spawn}
+\libidx{os}{setenv}
+\libidx{os}{env}
+\libidx{os}{gettimeofday}
+\libidx{os}{times}
+\libidx{os}{tmpdir}
+\libidx{os}{type}
+\libidx{os}{name}
+\libidx{os}{uname}
 
 The \type {os} library has a few extra functions and variables:
 
@@ -551,13 +573,101 @@ The \type {os} library has a few extra functions and variables:
 \stopitem
 
 \startitem
-    \type {os.uname()} returns a table with specific operating system
+    \type {os.uname} returns a table with specific operating system
     information acquired at runtime. The keys in the returned table are all
     string values, and their names are: \type {sysname}, \type {machine}, \type
     {release}, \type {version}, and \type {nodename}.
 \stopitem
 
 \stopitemize
+
+\stopsubsection
+
+\startsubsection[title={Binary input from files with \type {fio}}]
+
+\libidx{fio}{readcardinal1}
+\libidx{fio}{readcardinal2}
+\libidx{fio}{readcardinal3}
+\libidx{fio}{readcardinal4}
+\libidx{fio}{readcardinaltable}
+\libidx{fio}{readinteger1}
+\libidx{fio}{readinteger2}
+\libidx{fio}{readinteger3}
+\libidx{fio}{readinteger4}
+\libidx{fio}{readintegertable}
+\libidx{fio}{readfixed2}
+\libidx{fio}{readfixed4}
+\libidx{fio}{read2dot14}
+\libidx{fio}{setposition}
+\libidx{fio}{getposition}
+\libidx{fio}{skipposition}
+\libidx{fio}{readbytes}
+\libidx{fio}{readbytetable}
+%libidx{fio}{readline}
+%libidx{fio}{recordfilename}
+%libidx{fio}{checkpermission}
+
+This library provides a set of functions for reading numbers from a file and
+in addition to the regular \type {io} library functions.
+
+\starttabulate
+\NC \type{readcardinal1(f)}         \NC a 1 byte unsigned integer \NC \NR
+\NC \type{readcardinal2(f)}         \NC a 2 byte unsigned integer \NC \NR
+\NC \type{readcardinal3(f)}         \NC a 3 byte unsigned integer \NC \NR
+\NC \type{readcardinal4(f)}         \NC a 4 byte unsigned integer \NC \NR
+\NC \type{readcardinaltable(f,n,b)} \NC \type {n} cardinals of \type {b} bytes \NC \NR
+\NC \type{readinteger1(f)}          \NC a 1 byte signed integer \NC \NR
+\NC \type{readinteger2(f)}          \NC a 2 byte signed integer \NC \NR
+\NC \type{readinteger3(f)}          \NC a 3 byte signed integer \NC \NR
+\NC \type{readinteger4(f)}          \NC a 4 byte signed integer \NC \NR
+\NC \type{readintegertable(f,n,b)}  \NC \type {n} integers of \type {b} bytes \NC \NR
+\NC \type{readfixed2(f)}            \NC a 2 byte float (used in font files) \NC \NR
+\NC \type{readfixed4(f)}            \NC a 4 byte float (used in font files) \NC \NR
+\NC \type{read2dot14(f)}            \NC a 2 byte float (used in font files) \NC \NR
+\NC \type{setposition(f,p)}         \NC goto position \type {p} \NC \NR
+\NC \type{getposition(f)}           \NC get the current position \NC \NR
+\NC \type{skipposition(f,n)}        \NC skip \type {n} positions \NC \NR
+\NC \type{readbytes(f,n)}           \NC \type {n} bytes \NC \NR
+\NC \type{readbytetable(f,n)}       \NC \type {n} bytes\NC \NR
+\stoptabulate
+
+\stopsubsection
+
+\startsubsection[title={Binary input from strings with \type {sio}}]
+
+\libidx{sio}{readcardinal1}
+\libidx{sio}{readcardinal2}
+\libidx{sio}{readcardinal3}
+\libidx{sio}{readcardinal4}
+\libidx{sio}{readcardinaltable}
+\libidx{sio}{readinteger1}
+\libidx{sio}{readinteger2}
+\libidx{sio}{readinteger3}
+\libidx{sio}{readinteger4}
+\libidx{sio}{readintegertable}
+\libidx{sio}{readfixed2}
+\libidx{sio}{readfixed4}
+\libidx{sio}{read2dot14}
+\libidx{sio}{setposition}
+\libidx{sio}{getposition}
+\libidx{sio}{skipposition}
+\libidx{sio}{readbytes}
+\libidx{sio}{readbytetable}
+
+A similar set of function as in the \type {fio} library is available in the \type
+{sio} library. Here the first argument is a string.
+
+\stopsubsection
+
+\startsubsection[title={Hashes conform \type {sha2}}]
+
+\libidx{sha2}{digest256}
+\libidx{sha2}{digest384}
+\libidx{sha2}{digest512}
+
+This library is a side effect of the \type {pdfe} library that needs such
+helpers. The \type {digest256}, \type {digest384} and \type {digest512} functions
+accept a string and return a string with the hash.
 
 \stopsubsection
 
