--- a/doc/context/sources/general/manuals/luametatex/luametatex.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex.tex
@@ -1,3 +1,5 @@
+% language=uk
+
 \environment luametatex-style
 \environment luametatex-private
 
@@ -10,7 +12,7 @@
 \component luametatex-firstpage
 
 \startfrontmatter
-%     \component luametatex-contents
+  % \component luametatex-contents
     \component luametatex-introduction
 \stopfrontmatter
 
@@ -23,21 +25,21 @@
         \CONTEXT\ distribution.
     \stopparagraph
 
-%     \component luametatex-preamble
-%     \component luametatex-differences
-%     \component luametatex-modifications
-%     \component luametatex-lua
-%     \component luametatex-enhancements
-%     \component luametatex-fonts
-%     \component luametatex-math
-%     \component luametatex-nodes
-%     \component luametatex-callbacks
-%     \component luametatex-tex
-%     \component luametatex-metapost
-%     \component luametatex-pdf
-%     \component luametatex-libraries
-%     \component luametatex-additions
-%     \component luametatex-primitives
+  % \component luametatex-preamble
+  % \component luametatex-differences
+  % \component luametatex-modifications
+  % \component luametatex-lua
+  % \component luametatex-enhancements
+  % \component luametatex-fonts
+  % \component luametatex-math
+  % \component luametatex-nodes
+  % \component luametatex-callbacks
+  % \component luametatex-tex
+  % \component luametatex-metapost
+  % \component luametatex-pdf
+  % \component luametatex-libraries
+  % \component luametatex-additions
+  % \component luametatex-primitives
 
 \stopbodymatter
 
