--- a/doc/context/sources/general/manuals/luametatex/luametatex-introduction.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-introduction.tex
@@ -67,24 +67,9 @@ will be part of the regular \CONTEXT\ distribution.
 This manual sometimes refers to \LUATEX, especially when we talk of features
 common to both engine, as well as to \LUAMETATEX, when it is more specific to the
 follow up. A substantial amount of time went into the transition and more will go
-in, so if you want to complain about \LUAMETATEX, don't bother me.
-
-% It's interesting to note that there are people out there who have no problem
-% complaining about the program, the documentation, even barking about \CONTEXT,
-% which of course they don't use, never look at but still seem to use as
-% inspiration or maybe even for picking up code or understanding the engine. In
-% that respect sometimes the \TEX\ community is not different from competing
-% (commercial or not) software development. And of course one can make a better
-% wheel (fast) once one see one that has been invented (over a long period).
-%
-% When I see discussions about macro packages or engines they are not different
-% from the everlasting \TEX\ versus word processor debates. It's why I like staying
-% inside the \CONTEXT\ community bubble. Of course everyone is free to use
-% \LUAMETATEX, but one reason for making it a separate effort is that it needs time
-% (lots of time) to reach the state that we're in: an updated \TEX\ engine but in
-% its core still \TEX. It probably doesn't show from the resulting code how much
-% time it took those involved, time that no one ever paid for; we did it for the
-% fun of it, so let it remain fun to do.
+in, so if you want to complain about \LUAMETATEX, don't bother me. Of course, if
+you really need professional support with these engines (or \TEX\ in general),
+you can always consider contacting the developers.
 
 \blank[big]
 
@@ -101,6 +86,10 @@ Hans Hagen
 \NC \CONTEXT      \EQ MkIV \contextversion \NC \NR
 \NC \LUATEX\ Team \EQ Hans Hagen, Hartmut Henkel, Taco Hoekwater, Luigi Scarso \NC \NR
 \stoptabulate
+
+\LUAMETATEX\ development is mostly done by Hans Hagen and Alan Braslau, who love
+playing with the three languages involved. Testing is done by \CONTEXT\
+developers and users.
 
 \stopchapter
 
