--- a/doc/context/sources/general/manuals/luametatex/luametatex-building.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-building.tex
@@ -393,7 +393,7 @@ There is however a catch. The keyword scanners in \LUAMETATEX\ are implemented
 slightly different. When \TEX\ scans a keyword it will (case insensitive) scan
 for a whole keyword. So, it scans for \type {height} and when it doesn't find it
 it will scan for \type {depth} etc. When it does find a keyword in this case it
-expects a dimension next. When that criterium is not met it will issue an error
+expects a dimension next. When that criterion is not met it will issue an error
 message.
 
 In order to avoid look ahead failures like that it is recommended to end the
@@ -885,7 +885,7 @@ criteria makes a difference. Experiments with this demonstrated the usual: when
 asked what looks best contradictions mix with expectations and being triggered by
 events that one related to \TEX, like successive hyphenated lines.
 
-The \prm {linebreakcriterium} parameter can be set to a value made from four bytes. We're
+The \prm {linebreakcriterion} parameter can be set to a value made from four bytes. We're
 not going to explain the magic numbers because they come from and are discussed in original
 \TEX. It is enough to know that we have four criteria:
 
@@ -908,9 +908,9 @@ The original decisions are made in the following way:
 
 \starttyping
 function loose(badness)
-    if badness > loose_criterium then
+    if badness > loose_criterion then
         return very_loose_fit
-    elseif badness > decent_criterium then
+    elseif badness > decent_criterion then
         return loose_fit
     else {
         return decent_fit
@@ -918,7 +918,7 @@ function loose(badness)
 end
 
 function tight(badness)
-    if badness > decent_criterium then
+    if badness > decent_criterion then
         return tight_fit
     else {
         return decent_fit
@@ -957,7 +957,7 @@ doesn't work out as you expect. Don Knuth did a good job on the heuristics and
 after many decades there is no real need to change something. Consider it a
 playground.
 
-The parameter \prm {ignoredepthcriterium} is set to -1000pt at startup and is a
+The parameter \prm {ignoredepthcriterion} is set to -1000pt at startup and is a
 special signal for \prm {prevdepth}. You can change the value locally for
 educational purposes but best not mess with this standard value in production
 code unless you want special effects.
@@ -1181,7 +1181,7 @@ variable is global.
 Traditional \TEX\ has the \prm {parfillskip} parameter that determines the way
 the last line is filled. In \LUAMETATEX\ we also have \prm {parfillleftskip}. The
 counterparts for the first line are \prm {parinitleftskip} and \prm
-{parinitrightskip}.
+{parinitrightskip}. We also have \prm {parfillrightskip} as consistency alias.
 
 \startbuffer
 \leftskip        2em
