--- a/doc/context/sources/general/manuals/luametatex/luametatex.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex.tex
@@ -139,6 +139,13 @@
 % 1.65 sec tex only
 % 1.45 sec without saving format
 
+% 20230714      : 368 pages
+%
+% mingw         :  8.4 (we gained more that for the amd ... more cache and faster mem)
+% rpi 64        :      (hdd, not overclocked)
+% amd 10 fitlet : 30.9 12pps (we gained over 25% compared to the 268 page manual)
+
+
 % \ifdefined\linebuffering \linebuffering \fi
 
 \enableexperiments[fonts.compact]
