--- a/doc/context/sources/general/manuals/lowlevel/lowlevel-macros.tex
+++ b/doc/context/sources/general/manuals/lowlevel/lowlevel-macros.tex
@@ -1147,7 +1147,7 @@ Before we had \type {parameterdef} we had this:
 \startbuffer[test-5]
 \def\foo#1#2%
   {\integerdef\MyIndexOne\parameterindex\plusone % 1
-   \integerdef\MyIndexTwo\paramet\plustwo % 2
+   \integerdef\MyIndexTwo\parameterindex\plustwo % 2
    \oof{P}\oof{Q}\oof{R}\norelax}
 
 \def\oof#1%
