--- a/doc/context/sources/general/manuals/ontarget/ontarget.tex
+++ b/doc/context/sources/general/manuals/ontarget/ontarget.tex
@@ -29,6 +29,7 @@
         \component ontarget-fairphone
       % \component ontarget-mathsizes
         \component ontarget-constants
+        \component ontarget-accuracy
     \stopbodymatter
 
 \stopdocument
