--- a/doc/context/sources/general/manuals/graphics/graphics.tex
+++ b/doc/context/sources/general/manuals/graphics/graphics.tex
@@ -389,10 +389,10 @@ The actually inclusion of this image happened with:
 % point but for now you need to enable that explicitly:
 %
 % \starttyping[option=TEX]
-% \enabledirectrive[graphics.pdf.uselua]
-% \enabledirectrive[graphics.jpg.uselua]
-% \enabledirectrive[graphics.jp2.uselua]
-% \enabledirectrive[graphics.png.uselua]
+% \enabledirective[graphics.pdf.uselua]
+% \enabledirective[graphics.jpg.uselua]
+% \enabledirective[graphics.jp2.uselua]
+% \enabledirective[graphics.png.uselua]
 % \stoptyping
 %
 % All four can be enabled with:
