--- a/doc/context/sources/general/manuals/luametafun/luametafun.tex
+++ b/doc/context/sources/general/manuals/luametafun/luametafun.tex
@@ -35,6 +35,7 @@
         \component luametafun-poisson
         \component luametafun-fonts
         \component luametafun-color
+        \component luametafun-paths
         \component luametafun-groups
         \component luametafun-extensions
         \component luametafun-interface
