--- a/doc/context/sources/general/manuals/luametatex/luametatex-enhancements.tex
+++ b/doc/context/sources/general/manuals/luametatex/luametatex-enhancements.tex
@@ -2553,7 +2553,7 @@ and check if these values overlap within the ranges dedicated by the delta.
 The \type {*expr} parsers now accept \type {:} as operator for integer division
 (the \type {/} operators does rounding. This can be used for division compatible
 with \type {\divide}. I'm still wondering if adding a couple of bit operators
-makes sense (for integers).
+makes sense (for integers). The \type {;} can used to get the remainder.
 
 The \prm{numericscale} parser is kind of special (and might evolve). For now it
 converts a following number in a scale value as often used in \TEX, where 1000
